--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="user_cellphone">Ingresa tu número celular</string>
 
     <string name="app_register">Registrar</string>
+    <string name="app_endup">Terminar solicitud</string>
 
     <string name="app_adopt_name">Ingresa su nombre</string>
     <string name="app_adopt_age">Ingresa su edad</string>
@@ -58,5 +59,20 @@
     <string name="home_line1">Nuestra misión es rescatar animales de la calle en pésimas condiciones, curarlos, esterilizarlos y darlos en adopción.</string>
     <string name="home_line2">Tenemos un albergue con capacidad para albergar un maximo de 85 perritos de manera adecuada según sus necesidades, sin tenerlos hacinados.</string>
 
+    <string name="app_request_estado">Estado:</string>
+    <string name="app_request_ok">Aprobado</string>
+
+    <string name="app_requed_end">Para finalizar tu solicitud, por favor, sube la foto de tu nuevo mejor amigo/a. Gracias por tu apoyo.</string>
+    <string name="app_end">Finalizar</string>
+    <string name="app_photo">Tomar foto</string>
+
+    <string name="app_aprobar">Aprobar</string>
+    <string name="app_rechazar">Rechazar</string>
+    <string name="app_confirm_request">Confirmar solicitud</string>
+    <string name="app_detail_request">Solicitar adopción</string>
+
+    <string name="app_detail_sexo">Sexo:</string>
+    <string name="app_detail_peso">Peso:</string>
+    <string name="app_detail_edad">Edad:</string>
 
 </resources>
