--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">EntrePatas</string>
-    <string name="app_login">Inicio sesión</string>
+    <string name="app_login">Iniciar sesión</string>
     <string name="app_sigup">Ingresar</string>
     <string name="app_signup">Registrarme</string>
 
@@ -77,5 +77,7 @@
 
     <string name="api_maps">AIzaSyBKLsGVP4Dt3YRf0zLKXVqFT1xtxh0ALY4</string>
     <string name="title_activity_maps">Map</string>
+
+    <string name="app_btn_login">Iniciar sesión</string>
 
 </resources>
