--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,7 @@
     <string name="title_activity_maps">Map</string>
 
     <string name="app_btn_login">Iniciar sesión</string>
+    <string name="app_contact">Contacto</string>
+    <string name="app_telefono">Tel: (01) 351-0088</string>
 
 </resources>
