--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,32 @@
     <string name="app_telefono">Tel: (01) 351-0088</string>
     <string name="msg_token_fmt">Tel: (01) 351-0088</string>
 
+    <!-- Mensaje -->
+    <string name="msg_login_usuario">Ingresar correo</string>
+    <string name="msg_login_password">La contraseña no puede ser vacío. Corregir.</string>
+    <string name="msg_login_incorecto">Correo o contraseña, inválidos. Corregir.</string>
+    <string name="msg_login_exito">Login exitoso.</string>
+
+    <string name="msg_singup_exito">Registro exitoso</string>
+    <string name="msg_singup_mail">Ingresar correo</string>
+    <string name="msg_singup_valMail">El correo electrónico ingresado es incorrecto. Corregir.</string>
+    <string name="msg_singup_password">La contraseña no puede ser vacío. Corregir.</string>
+    <string name="msg_singup_repasswod">El repetir contraseña no puede ser vacío. Corregir</string>
+    <string name="msg_singup_valPass">Las contraseñas ingresadas deben ser las mismas. Corregir.</string>
+    <string name="msg_singup_nombre">Ingresar nombre</string>
+    <string name="msg_singup_apellido">Ingresar apellidos</string>
+    <string name="msg_singup_telefono">Ingresar telefono</string>
+    <string name="msg_singup_format_telefono">El número celular debe ser un valor numérico de 9 dígitos. Corregir.</string>
+
+    <string name="msg_register_nombre">El nombre del perro no puede ser vacío. Corregir.</string>
+    <string name="msg_register_sexo">Seleccionar sexo.</string>
+    <string name="msg_register_edad">La edad (en años) del perro ingresada es incorrecta. Corregir."</string>
+    <string name="msg_register_peso">El peso (en kilogramos) del perro ingresado es incorrecto. Corregir.</string>
+    <string name="msg_register_foto">Agregar foto</string>
+    <string name="msg_register_exito">Registro exitoso.</string>
+    <string name="msg_register_fallo">Revisar los datos ingresados.</string>
+    <!-- Error -->
+
+    <string name="msg_error_ocurrio">Ocurrió un error inesperado, intentelo mas tarde.</string>
+
 </resources>
