--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="app_detail_peso">Peso:</string>
     <string name="app_detail_edad">Edad:</string>
 
-    <string name="api_maps">AIzaSyBKLsGVP4Dt3YRf0zLKXVqFT1xtxh0ALY4</string>
+    <string name="api_maps">AIzaSyBoIqw0uJPKiGQRaacIGeoi1La46OVlaNY</string>
     <string name="title_activity_maps">Map</string>
 
     <string name="app_btn_login">Iniciar sesión</string>
@@ -128,6 +128,9 @@
     <string name="mensaje_solicitud_aprobada">Solicitud aprobada.</string>
     <string name="mensaje_solicitud_rechazada">Solicitud rechazada.</string>
     <string name="mensaje_solicitud_terminada">Solicitud finalizada exitosamente.</string>
+
+    <string name="mensaje_cancelar_solicitud">Si retrocede se cancelará su solicitud.\n ¿Está seguro?</string>
+
     <string name="mensaje_procesando">Procesando...</string>
     <string name="mensaje_loading">Cargando...</string>
     <string name="mensaje_validar_credenciales">Validando Credenciales...</string>
